kubernetes/5.4_lets_encrypt_multi_apps/app2/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: snippet-letsencrypt-multi-demo-app2
